# TeamPlanets

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.txt  technical_note.txt
bots/: CMakeLists.txt
bots/bully/: main.cpp
bots/bully_team/: main.cpp
bots/dual/: main.cpp
bots/dual_team/: main.cpp
bots/rage/: main.cpp
bots/rage_team/: main.cpp
bots/sage/: bot.cpp  bot.hpp  decision.cpp  decision.hpp  enemy_decision.cpp  enemy_decision.hpp  log.cpp  log.hpp  main.cpp  my_decision.cpp  my_decision.hpp  sagebot.cpp  sagebot.hpp  team.cpp  utils.hpp
bots/sage0/: bot.hpp  sagebot.cpp  team.cpp  team.hpp
engine/: CMakeLists.txt
engine/src/: battlethread.cpp  battlethread.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mapwidget.cpp  mapwidget.hpp  player.cpp  player.hpp  startbattledialog.cpp  startbattledialog.hpp  startbattledialog.ui
libs/libteamplanets/: CMakeLists.txt
libs/libteamplanets/src/: basic_types.cpp  basic_types.hpp  coordinates.hpp  fleet.hpp  map.cpp  map.hpp  planet.hpp
maps/: planets_10_team_2.txt  planets_5_team_1.txt  planets_99_team_10.txt
